--- a/client/src/components/contactForm/ContactForm.css
+++ b/client/src/components/contactForm/ContactForm.css
@@ -1,2 +1,13 @@
-Form {
+.alert {
+  color: red;
+  font-size: 15px;
+  font-weight: bold;
+}
+
+.submitButton {
+  text-align: center;
+}
+.contactFormPage {
+  margin-top: 25px;
+  font-size: bold;
 }
